--- a/po/de.po
+++ b/po/de.po
@@ -556,7 +556,7 @@ msgstr "Download-Ordner öffnen"
 
 #: src/gpodder/gtkui/main.py:1711
 msgid "Mark episodes as old"
-msgstr "Episoden als alt markieren"
+msgstr "Episoden als \"Alt\" markieren"
 
 #: src/gpodder/gtkui/main.py:1715 src/gpodder/gtkui/main.py:1941
 msgid "Archive"
