update Command on Download description for every language

--- a/po/hu.po
+++ b/po/hu.po
@@ -1642,7 +1642,7 @@ msgid "Run a Command on Download"
 msgstr ""
 
 #: share/gpodder/extensions/command_on_download.py:19
-msgid "Run the `extensions.command_on_download.command` on download"
+msgid "Run a predefined external command upon download completion."
 msgstr ""
 
 #: share/gpodder/extensions/video_converter.py:20
