--- a/po/de.po
+++ b/po/de.po
@@ -1619,7 +1619,7 @@ msgid "Run a Command on Download"
 msgstr "Einen Befehl nach dem Download ausführen"
 
 #: share/gpodder/extensions/command_on_download.py:19
-msgid "Run the `extensions.command_on_download.command` on download"
+msgid "Run a predefined external command upon download completion."
 msgstr "Führen Sie nach Abschluss des Downloads einen vordefinierten externen Befehl aus"
 
 #: share/gpodder/extensions/video_converter.py:20
