--- a/po/nl.po
+++ b/po/nl.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: gPodder\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-12-22 12:59+0100\n"
-"PO-Revision-Date: 2018-08-11 13:47+0200\n"
+"PO-Revision-Date: 2018-12-22 16:33+0100\n"
 "Last-Translator: Heimen Stoffels <vistausss@outlook.com>\n"
 "Language-Team: Dutch (http://www.transifex.com/projects/p/gpodder/language/"
 "nl/)\n"
@@ -21,7 +21,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.0.9\n"
+"X-Generator: Poedit 2.1.1\n"
 
 #: src/gpodder/config.py:54
 #, python-format
@@ -647,12 +647,13 @@ msgstr "Podcast-instellingen"
 
 #: src/gpodder/gtkui/main.py:1777
 msgid "File already exist"
-msgstr ""
+msgstr "Bestand bestaat al"
 
 #: src/gpodder/gtkui/main.py:1779
 #, python-format
 msgid "A file named \"%(filename)s\" already exist. Do you want to replace it?"
 msgstr ""
+"Er bestaat al een bestand genaamd \"%(filename)s\". Wil je het vervangen?"
 
 #: src/gpodder/gtkui/main.py:1821
 #, python-format
@@ -660,16 +661,17 @@ msgid ""
 "Error saving to local folder: %(error)r.\n"
 "Would you like to continue?"
 msgstr ""
+"Kan niet opslaan naar lokale map: %(error)r.\n"
+"Wil je doorgaan?"
 
 #: src/gpodder/gtkui/main.py:1823 src/gpodder/gtkui/main.py:1828
-#, fuzzy
 msgid "Error saving to local folder"
-msgstr "Fout bij wegschrijven van afspeellijstbestanden"
+msgstr "Kan niet opslaan naar lokale map"
 
 #: src/gpodder/gtkui/main.py:1827
 #, python-format
 msgid "Error saving to local folder: %(error)r"
-msgstr ""
+msgstr "Kan niet opslaan naar lokale map: %(error)r"
 
 #: src/gpodder/gtkui/main.py:1848
 msgid "Error converting file."
@@ -733,7 +735,7 @@ msgstr "Bezig met toevoegen van podcasts"
 
 #: src/gpodder/gtkui/main.py:2383
 msgid "Please wait while episode information is downloaded."
-msgstr "Even geduld; de informatie van de aflevering wordt gedownload"
+msgstr "Even geduld; de informatie van de aflevering wordt gedownload."
 
 #: src/gpodder/gtkui/main.py:2390
 msgid "Existing subscriptions skipped"
@@ -1548,7 +1550,11 @@ msgid "Export remaining %(count)d episode to this folder with its default name"
 msgid_plural ""
 "Export remaining %(count)d episodes to this folder with their default name"
 msgstr[0] ""
+"Bezig met exporteren van %(count)d resterende aflevering naar deze map met "
+"de standaardnaam"
 msgstr[1] ""
+"Bezig met exporteren van %(count)d resterende afleveringen naar deze map met "
+"de standaardnaam"
 
 #: src/gpodder/gtkui/desktop/channel.py:98
 msgid "Add section"
@@ -2242,7 +2248,6 @@ msgid "Invalid url: %s"
 msgstr "Ongeldige URL: %s"
 
 #: bin/gpo:318
-#, fuzzy
 msgid "User name:"
 msgstr "Gebruikersnaam:"
 
@@ -2376,37 +2381,39 @@ msgstr "URL gewijzigd van %(old_url)s naar %(new_url)s."
 #: bin/gpo:789
 #, python-format
 msgid "%(title)s: %(msg)s ([yes]/no): "
-msgstr ""
+msgstr "%(title)s: %(msg)s ([ja]/nee): "
 
 #: bin/gpo:793
 msgid "yes"
-msgstr ""
+msgstr "ja"
 
 #: bin/gpo:831
-#, fuzzy, python-format
+#, python-format
 msgid "Deleting episode: %(episode)s"
-msgstr "Bezig met verwijderen van afleveringen"
+msgstr "Bezig met verwijderen van aflevering: %(episode)s"
 
 #: bin/gpo:864
 msgid ""
 "Enter episode index to toggle, ? for list, X to select all, space to select "
 "none, empty when ready"
 msgstr ""
+"Voer het afleveringsoverzicht in om te schakelen, ? voor een lijst, X om "
+"alles te selecteren, spatie om niks te selecteren , leeg indien klaar"
 
 #: bin/gpo:896
-#, fuzzy, python-format
+#, python-format
 msgid "Will delete %(episode)s"
-msgstr "Verwijderde afleveringen verbergen"
+msgstr "%(episode)s wordt/worden verwijderd"
 
 #: bin/gpo:898
-#, fuzzy, python-format
+#, python-format
 msgid "Won't delete %(episode)s"
-msgstr "Afleveringen verwijderen"
+msgstr "%(episode)s wordt/worden niet verwijderd"
 
 #: bin/gpo:911
-#, fuzzy, python-format
+#, python-format
 msgid "Syncing %s"
-msgstr "Bezig met toevoegen van %s"
+msgstr "Bezig met synchroniseren van %s"
 
 #: bin/gpo:981
 #, python-format
