--- a/po/de.po
+++ b/po/de.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: gPodder\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-12-22 12:59+0100\n"
-"PO-Revision-Date: 2018-12-22 17:32+0100\n"
+"PO-Revision-Date: 2018-12-22 17:40+0100\n"
 "Last-Translator: TZocker\n"
 "Language-Team: German (http://www.transifex.com/projects/p/gpodder/language/"
 "de/)\n"
@@ -2382,7 +2382,7 @@ msgstr "URL von %(old_url)s zu %(new_url)s geändert."
 #: bin/gpo:789
 #, python-format
 msgid "%(title)s: %(msg)s ([yes]/no): "
-msgstr "%(title)s: %(msg)s ([yes]/no): "
+msgstr "%(title)s: %(msg)s ([Ja]/Nein): "
 
 #: bin/gpo:793
 msgid "yes"
