--- a/po/de.po
+++ b/po/de.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: gPodder\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-12-22 12:59+0100\n"
-"PO-Revision-Date: 2018-12-22 17:40+0100\n"
+"PO-Revision-Date: 2018-12-22 17:45+0100\n"
 "Last-Translator: TZocker\n"
 "Language-Team: German (http://www.transifex.com/projects/p/gpodder/language/"
 "de/)\n"
@@ -2404,12 +2404,12 @@ msgstr ""
 #: bin/gpo:896
 #, python-format
 msgid "Will delete %(episode)s"
-msgstr "Lösche Episode. %(episode)s"
+msgstr "Lösche Episode %(episode)s"
 
 #: bin/gpo:898
 #, python-format
 msgid "Won't delete %(episode)s"
-msgstr "Lösche nicht Episode. %(episode)s"
+msgstr "Lösche nicht Episode %(episode)s"
 
 #: bin/gpo:911
 #, python-format
