--- a/po/de.po
+++ b/po/de.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: gPodder\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-12-22 12:59+0100\n"
-"PO-Revision-Date: 2018-12-22 17:45+0100\n"
+"PO-Revision-Date: 2018-12-22 17:48+0100\n"
 "Last-Translator: TZocker\n"
 "Language-Team: German (http://www.transifex.com/projects/p/gpodder/language/"
 "de/)\n"
@@ -2391,7 +2391,7 @@ msgstr "ja"
 #: bin/gpo:831
 #, python-format
 msgid "Deleting episode: %(episode)s"
-msgstr "Lösche Episode. %(episode)s"
+msgstr "Lösche Episoden: %(episode)s"
 
 #: bin/gpo:864
 msgid ""
